--- a/pomotasker/pubspec.yaml
+++ b/pomotasker/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
   custom_timer: ^0.2.3
+  flutter_slidable: ^3.0.1
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
